# Udacity

./: .gitignore  CMakeLists.txt  README.md  my_robot.rviz
ball_chaser/: CMakeLists.txt  CMakeLists.txt:Zone.Identifier  package.xml
ball_chaser/src/: drive_bot.cpp  process_images.cpp
catkin_ws/src/: README.md
catkin_ws/src/add_markers/: CMakeLists.txt  package.xml
catkin_ws/src/add_markers/src/: add_markers.cpp  add_markers_home_service.cpp
catkin_ws/src/my_robot/: CMakeLists.txt  package.xml
catkin_ws/src/my_robot/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml
catkin_ws/src/my_robot/launch/: amcl.launch  slam.launch  world.launch
catkin_ws/src/my_robot/maps/: myworld_map.yaml
catkin_ws/src/my_robot/rviz/: navigation.rviz
catkin_ws/src/my_robot/urdf/: my_robot.gazebo  my_robot.xacro
catkin_ws/src/my_robot/world/: myworld.world
catkin_ws/src/pick_objects/: package.xml
catkin_ws/src/pick_objects/src/: pick_objects.cpp
catkin_ws/src/scripts/: add_markers.sh  home_service.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
model/Building/mybuilding/: model.sdf
model/Building/mybuilding/Buinding_model2/: model.config  model.sdf
model/HumanoidRobot/Robot2/: model.config  model.sdf
model/HumanoidRobot/robot1/: model.config  model.sdf
my_robot/: CMakeLists.txt  package.xml  package.xml:Zone.Identifier
my_robot/config/: local_costmap_params.yaml  my_robot.rviz
my_robot/launch/: amcl.launch  localization.launch  mapping.launch  teleop.launch  world.launch
my_robot/urdf/: my_robot.gazebo  my_robot.xacro
my_robot/world/myworld2.world/: model.config  model.sdf  myworld2.world
script/: helloworld.cpp
world/: myproject_world  myworld.world
