<?xml version="1.0"?>
<package format="2">
  <n>pick_objects</n>
  <version>0.0.0</version>
  <description>Pick objects package - sends navigation goals</description>
  <maintainer email="ruan_sfs@hotmail.com">Ruan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <export></export>
</package>
